--- a/src/BuildingBlocks.EventSourcing/BuildingBlocks.EventSourcing.csproj
+++ b/src/BuildingBlocks.EventSourcing/BuildingBlocks.EventSourcing.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BuildingBlocks.EventSourcing\BuildingBlocks.EventSourcing.csproj" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="12.0.0" />
   </ItemGroup>
 
 </Project>
