--- a/src/Core.API/appsettings.Development.json
+++ b/src/Core.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Database=rentalApp; Username=postgres; Password=mysecretpassword"
+    "DefaultConnection": "Host=localhost; Database=postgres; Username=postgres; Password=postgres"
   },
   "Logging": {
     "LogLevel": {
