--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,15 @@ services:
     build:
       context: .
       dockerfile: src/Core.API/Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+    depends_on:
+      - rabbitmq
+      - postgres
+    ports:
+      - "8080:8080"
+    networks:
+      - postgres
 
   rabbitmq:
     image: rabbitmq:3-management
