--- a/src/Core.API/appsettings.Development.json
+++ b/src/Core.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Database=postgres; Username=postgres; Password=postgres"
+    "DefaultConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=rental_app;"
   },
   "Logging": {
     "LogLevel": {
