--- a/src/BuildingBlocks.EventSourcing/BuildingBlocks.EventSourcing.csproj
+++ b/src/BuildingBlocks.EventSourcing/BuildingBlocks.EventSourcing.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="12.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Communication\" />
+  </ItemGroup>
+
 </Project>
