organizando inicializacao de APIs

--- a/src/Authentication.API/appsettings.Development.json
+++ b/src/Authentication.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=rental_app;"
+    "DefaultConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=AuthenticationDb;"
   },
   "Logging": {
     "LogLevel": {
