--- a/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BuildingBlocks.API.Core\BuildingBlocks.API.Core.csproj" />
+  </ItemGroup>
+
 </Project>
