--- a/src/Authentication.API/Authentication.API.csproj
+++ b/src/Authentication.API/Authentication.API.csproj
@@ -18,8 +18,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Authentication.Domain\Authentication.Domain.csproj" />
-    <ProjectReference Include="..\Authentication.Infraestructure\Authentication.Infraestructure.csproj" />
+    <ProjectReference Include="..\BuildingBlocks.API.Core\BuildingBlocks.API.Core.csproj" />
+    <ProjectReference Include="..\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Application\DomainEvents\" />
+    <Folder Include="Application\Queries\" />
   </ItemGroup>
 
 </Project>
