--- a/src/BuildingBlocks.API.Core/BuildingBlocks.API.Core.csproj
+++ b/src/BuildingBlocks.API.Core/BuildingBlocks.API.Core.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
