Feature/adding authentication authorization (#2)
* adding authentication with JWT

* organizando inicializacao de APIs

* simplifying folders and adding JWT

* dev

* forgot to commit

---------

Co-authored-by: Bruno Brixius <bruno.brixius@neoep.com.br>

--- a/src/Authentication.Domain/Authentication.Domain.csproj
+++ b/src/Authentication.Domain/Authentication.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BuildingBlocks.EventSourcing\BuildingBlocks.EventSourcing.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
