--- a/src/Authentication.API/appsettings.Development.json
+++ b/src/Authentication.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=AuthenticationDb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
