--- a/src/BuildingBlocks.Security/BuildingBlocks.Security.csproj
+++ b/src/BuildingBlocks.Security/BuildingBlocks.Security.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="JWT" Version="10.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.5" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.6.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0" />
