--- a/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="8.102.3" />
   </ItemGroup>
 
   <ItemGroup>
