--- a/src/Authentication.API/appsettings.json
+++ b/src/Authentication.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "SecretKey": "$2y$10$thzzUdc4AEISPxg/OwSvH.rVc7bvtGkMRCG2tWeF9J/PycY9a1Pja",
+    "Secret": "$2y$10$thzzUdc4AEISPxg/OwSvH.rVc7bvtGkMRCG2tWeF9J/PycY9a1Pja",
     "Expiration": "2",
     "Issuer": "localhost",
     "Audience": "localhost"
