--- a/src/Authentication.API/Authentication.API.csproj
+++ b/src/Authentication.API/Authentication.API.csproj
@@ -20,13 +20,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BuildingBlocks.API.Core\BuildingBlocks.API.Core.csproj" />
+    <ProjectReference Include="..\BuildingBlocks.Identity\BuildingBlocks.Identity.csproj" />
     <ProjectReference Include="..\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
     <ProjectReference Include="..\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
     <ProjectReference Include="..\BuildingBlocks.Utils\BuildingBlocks.Utils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Data\Repositories\" />
     <Folder Include="Application\DomainEvents\" />
+    <Folder Include="Infraestructure\EntityConfiguration\" />
   </ItemGroup>
 
 </Project>
