--- a/src/BuildingBlocks.Identity/BuildingBlocks.Identity.csproj
+++ b/src/BuildingBlocks.Identity/BuildingBlocks.Identity.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\Exceptions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
