--- a/src/Authentication.API/Authentication.API.csproj
+++ b/src/Authentication.API/Authentication.API.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Application\Data\Repositories\" />
-    <Folder Include="Application\DomainEvents\" />
+    <Folder Include="Application\DomainEvents\Handling\" />
     <Folder Include="Infraestructure\EntityConfiguration\" />
   </ItemGroup>
 
