separate in projects

--- a/src/Core.API/appsettings.json
+++ b/src/Core.API/appsettings.json
@@ -11,5 +11,12 @@
     "Expiration": "2",
     "Issuer": "localhost",
     "Audience": "localhost"
+  },
+  "RabbitMqHostSettings": {
+    "Host": "localhost",
+    "Port": "5672",
+    "VirtualHost": "/",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
