--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - "7010:8080"
     networks:
       - postgres
+      - rabbitmq_net
 
   authentication.api:
     image: ${DOCKER_REGISTRY-}authenticationapi
@@ -30,6 +31,7 @@ services:
       - "7000:8080"
     networks:
       - postgres
+      - rabbitmq_net
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -38,10 +40,13 @@ services:
       - "5672:5672"
       - "15672:15672"
     environment:
-      RABBITMQ_DEFAULT_USER: user
-      RABBITMQ_DEFAULT_PASS: password
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - rabbitmq_net
+    restart: unless-stopped
 
   postgres:
     container_name: postgres_container
@@ -74,12 +79,97 @@ services:
       - postgres
     restart: unless-stopped
 
+  smtp4dev:
+    image: rnwood/smtp4dev:v3
+    restart: unless-stopped
+    ports:
+      # Web interface
+      - '5000:80'
+      # SMTP server port
+      - '25:25'
+      # IMAP server port
+      - '143:143'
+    volumes:
+        - smtp4dev-data:/smtp4dev
+    environment:
+      # Uncomment to customise these settings
+      # This is not a complete list of the available settings.
+      # See the documentation in appsettings.json for a full list.
+
+      #Specifies the virtual path from web server root where SMTP4DEV web interface will be hosted. e.g. "/" or "/smtp4dev"
+      #- ServerOptions__BasePath=/smtp4dev
+
+      #Specifies the URLs the web UI will use inside the container.
+      - ServerOptions__Urls=http://*:80
+
+      #Specifies the server hostname. Used in auto-generated TLS certificate if enabled.
+      - ServerOptions__HostName=smtp4dev
+
+      #Locks settings from being changed by user via web interface
+      #- ServerOptions__LockSettings=true
+
+      #Specifies the path where the database will be stored relative to APPDATA env var on Windows or XDG_CONFIG_HOME on non-Windows. Specify "" to use an in memory database.
+      #- ServerOptions__Database=database.db
+
+      #Specifies the number of messages to keep
+      #- ServerOptions__NumberOfMessagesToKeep=100
+
+      #Specifies the number of sessions to keep
+      #- ServerOptions__NumberOfSessionsToKeep=100
+
+      #Specifies the TLS mode to use. None=Off. StartTls=On demand if client supports STARTTLS. ImplicitTls=TLS as soon as connection is established.
+      #- ServerOptions__TlsMode=None
+
+      #Specifies the TLS certificate to use if TLS is enabled/requested. Specify "" to use an auto-generated self-signed certificate (then see console output on first startup)
+      #- ServerOptions__TlsCertificate=
+
+      #Sets the name of the SMTP server that will be used to relay messages or "" if messages should not be relayed
+      #- RelayOptions__SmtpServer=
+
+      #Sets the port number for the SMTP server used to relay messages.
+      #- RelayOptions__SmtpPort=25
+
+      #Specifies a comma separated list of recipient addresses for which messages will be relayed. An empty list means that no messages are relayed.
+      #- RelayOptions__AllowedEmailsString=
+
+      #Specifies the address used in MAIL FROM when relaying messages. (Sender address in message headers is left unmodified). The sender of each message is used if not specified.
+      #- RelayOptions__SenderAddress=
+
+      #The username for the SMTP server used to relay messages. If "" no authentication is attempted.
+      #- RelayOptions__Login=
+
+      #The password for the SMTP server used to relay messages
+      #- RelayOptions__Password=
+
+      #Specifies the port the IMAP server will listen on - allows standard email clients to view/retrieve messages
+      #"ServerOptions__ImapPort"=143
+
+  worker.api:
+    image: ${DOCKER_REGISTRY-}workerapi
+    build:
+      context: .
+      dockerfile: src/Worker.Api/Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+    depends_on:
+      - rabbitmq
+      - postgres
+    ports:
+      - "7020:8080"
+    networks:
+      - postgres
+      - rabbitmq_net
+
 networks:
   postgres:
     driver: bridge
+  rabbitmq_net:
+    driver: bridge
 
 volumes:
+    smtp4dev-data:
     rabbitmq_data:
         driver: local
     postgres:
     pgadmin:
+
