--- a/src/Core.API/Core.API.csproj
+++ b/src/Core.API/Core.API.csproj
@@ -26,6 +26,10 @@
     <ProjectReference Include="..\BuildingBlocks.EventSourcing\BuildingBlocks.EventSourcing.csproj" />
     <ProjectReference Include="..\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
     <ProjectReference Include="..\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
+    <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
+    <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+    <ProjectReference Include="..\Core.Infraestructure\Core.Infraestructure.csproj" />
+    <ProjectReference Include="..\Crosscutting.EventBus.RabbitMq\Crosscutting.EventBus.RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
