:ok_hand: smtp working

--- a/src/Worker.Api/appsettings.json
+++ b/src/Worker.Api/appsettings.json
@@ -12,5 +12,13 @@
     "VirtualHost": "/",
     "Username": "guest",
     "Password": "guest"
+  },
+  "SmtpSettings": {
+    "Host": "smtp4dev",
+    "Port": "25",
+    "SenderName": "Worker.Api",
+    "ServerEmail": "automatic-worker@rentalapp.com",
+    "Username": "",
+    "Password": ""
   }
 }
