--- a/src/Worker.Api/Worker.Api.csproj
+++ b/src/Worker.Api/Worker.Api.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\Crosscutting.EventBus.RabbitMq\Crosscutting.EventBus.RabbitMq.csproj" />
     <ProjectReference Include="..\Crosscutting.EventStore.Postgres\Crosscutting.EventStore.Postgres.csproj" />
+    <ProjectReference Include="..\Crosscutting.Mail\Crosscutting.Mail.csproj" />
   </ItemGroup>
 
 </Project>
