--- a/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks.Infrastructure/BuildingBlocks.Infrastructure.csproj
@@ -15,6 +15,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BuildingBlocks.API.Core\BuildingBlocks.API.Core.csproj" />
+    <ProjectReference Include="..\BuildingBlocks.Domain\BuildingBlocks.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Events\" />
   </ItemGroup>
 
 </Project>
