--- a/src/Core.Application/Core.Application.csproj
+++ b/src/Core.Application/Core.Application.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BuildingBlocks.Common\BuildingBlocks.Common.csproj" />
     <ProjectReference Include="..\BuildingBlocks.Infrastructure\BuildingBlocks.Infrastructure.csproj" />
     <ProjectReference Include="..\Core.Infraestructure\Core.Infraestructure.csproj" />
   </ItemGroup>
