--- a/src/BuildingBlocks.API.Core/BuildingBlocks.API.Core.csproj
+++ b/src/BuildingBlocks.API.Core/BuildingBlocks.API.Core.csproj
@@ -16,6 +16,7 @@
 	<PackageReference Include="Serilog" Version="3.1.1" />
 	<PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
 	<PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
+	<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
