--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,19 +117,32 @@ services:
       - smtp4devlan
       - postgres
       - rabbitmq_net
+  minio:
+    image: docker.io/bitnami/minio:2022
+    ports:
+        - '9000:9000'
+        - '9001:9001'
+    networks:
+        - minionetwork
+    volumes:
+        - 'minio_data:/data'
+    environment:
+        - MINIO_ROOT_USER=minioadmin
+        - MINIO_ROOT_PASSWORD=minioadmin
+        - MINIO_DEFAULT_BUCKETS=rental_bucket
 
 networks:
+  minionetwork:
   smtp4devlan:
-    driver: bridge
   postgres:
-    driver: bridge
   rabbitmq_net:
     driver: bridge
 
 volumes:
+    minio_data:
     smtp4dev-data:
     rabbitmq_data:
-        driver: local
     postgres:
     pgadmin:
+        driver: local
 
