--- a/src/Core.API/appsettings.json
+++ b/src/Core.API/appsettings.json
@@ -18,5 +18,14 @@
     "VirtualHost": "/",
     "Username": "guest",
     "Password": "guest"
+  },
+  "MinIOSettings": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "ExternalUrl": "http://localhost:9000",
+    "Port": 9000,
+    "AccessKey": "accesskey",
+    "SecretKey": "secretkey"
   }
 }
