save to add some testing

--- a/src/Core.API/appsettings.json
+++ b/src/Core.API/appsettings.json
@@ -24,8 +24,8 @@
     "AccessKey": "minioadmin",
     "SecretKey": "minioadmin",
     "ExternalUrl": "http://localhost:9000",
-    "Port": 9000,
-    "AccessKey": "accesskey",
-    "SecretKey": "secretkey"
+    "Port": 9000
+    //"AccessKey": "accesskey",
+    //"SecretKey": "secretkey"
   }
 }
