--- a/src/Core.API/appsettings.json
+++ b/src/Core.API/appsettings.json
@@ -20,12 +20,14 @@
     "Password": "guest"
   },
   "MinIOSettings": {
-    "Endpoint": "localhost:9000",
-    "AccessKey": "minioadmin",
-    "SecretKey": "minioadmin",
-    "ExternalUrl": "http://localhost:9000",
-    "Port": 9000
-    //"AccessKey": "accesskey",
-    //"SecretKey": "secretkey"
+    "Endpoint": "localhost",
+    "AccessKey": "GwK3QyA0OviZWMzlgL0x",
+    "SecretKey": "EiSsMbVbwlXkoTlgtW4WW2xXxC6YDrRqQGfnxDXL"
+  },
+  "MinIOPlaygroundSettings": {
+    "Endpoint": "play.min.io",
+    "AccessKey": "fAJfnM18fRmI8FBiqSvF",
+    "SecretKey": "RNdRVYzz1ERcCP3e7cf5OcwBGU51vTsG5X2kvcug",
+    "ExternalUrl": "play.min.io:9443/browser"
   }
 }
