--- a/src/Core.API/Core.API.csproj
+++ b/src/Core.API/Core.API.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\Core.Data\Core.Data.csproj" />
     <ProjectReference Include="..\Crosscutting.EventBus.RabbitMq\Crosscutting.EventBus.RabbitMq.csproj" />
+    <ProjectReference Include="..\Crosscutting.StorageService.MinIO\Crosscutting.StorageService.MinIO.csproj" />
   </ItemGroup>
 
   <ItemGroup>
