--- a/src/Crosscutting.StorageService.MinIO/Crosscutting.StorageService.MinIO.csproj
+++ b/src/Crosscutting.StorageService.MinIO/Crosscutting.StorageService.MinIO.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Minio" Version="6.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
