--- a/src/Authentication.Data/Authentication.Data.csproj
+++ b/src/Authentication.Data/Authentication.Data.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.5" />
+    <Folder Include="EntityConfiguration\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BuildingBlocks.Identity\BuildingBlocks.Identity.csproj" />
+    <ProjectReference Include="..\Authentication.Domain\Authentication.Domain.csproj" />
   </ItemGroup>
 
 </Project>
