--- a/tests/Core.FunctionalTests/Core.FunctionalTests.csproj
+++ b/tests/Core.FunctionalTests/Core.FunctionalTests.csproj
@@ -4,8 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-  </PropertyGroup>
 
+    <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
+  </PropertyGroup>
+	
 	<ItemGroup>
 		<PackageReference Include="AutoBogus" Version="2.13.1" />
 		<PackageReference Include="AutoFixture" Version="4.18.1" />
@@ -14,15 +17,23 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
 		<PackageReference Include="xunit" Version="2.5.3" />
 		<PackageReference Include="Xunit.Extensions.Ordering" Version="1.4.5" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
 	</ItemGroup>
 
+  <ItemGroup>
+    <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Renter\" />
+  </ItemGroup>
+
 	<ItemGroup>
-	  <ProjectReference Include="..\..\src\BuildingBlocks.Domain\BuildingBlocks.Domain.csproj" />
-	  <ProjectReference Include="..\..\src\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
+		<ProjectReference Include="..\..\src\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
+		<ProjectReference Include="..\..\src\Core.API\Core.API.csproj" />
+		<ProjectReference Include="..\Testing.Base\Testing.Base.csproj" />
 	</ItemGroup>
 
 </Project>
