--- a/src/Worker.Api/appsettings.Development.json
+++ b/src/Worker.Api/appsettings.Development.json
@@ -6,6 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "EventStoreConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=EventStoreDb;"
+    "EventStoreConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=EventStoreDb;",
+    "CloudEventStoreConnection": "Host=db-55153.dc-us-1.absamcloud.com;User ID=d_event_c;Password=sys7rn9tsgz6;Port=13504;Database=eventstoredb;"
+
   }
 }
