--- a/tests/Core.FunctionalTests/Core.FunctionalTests.csproj
+++ b/tests/Core.FunctionalTests/Core.FunctionalTests.csproj
@@ -18,16 +18,13 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
 		<PackageReference Include="xunit" Version="2.5.3" />
+		<PackageReference Include="xunit.assemblyfixture" Version="2.2.0" />
 		<PackageReference Include="Xunit.Extensions.Ordering" Version="1.4.5" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
 	</ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Renter\" />
   </ItemGroup>
 
 	<ItemGroup>
