--- a/src/Authentication.API/appsettings.Development.json
+++ b/src/Authentication.API/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DockerConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=AuthenticationDb;",
-    "CloudConnection": "Host=db-55153.dc-us-1.absamcloud.com;User ID=d_auth_c;Password=zlvo9472eivj;Port=13504;Database=authenticationdb;"
+    "DefaultConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=AuthenticationDb;"
   },
   "Logging": {
     "LogLevel": {
