--- a/src/Core.API/appsettings.Cloud.json
+++ b/src/Core.API/appsettings.Cloud.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=RentalAppDb;"
+    "DefaultConnection": "Host=db-55153.dc-us-1.absamcloud.com;User ID=d_core_c;Password=i9yt6w9c2aa4;Port=13504;Database=coredb;"
   },
   "Logging": {
     "LogLevel": {
