--- a/src/Worker.Api/Worker.Api.csproj
+++ b/src/Worker.Api/Worker.Api.csproj
@@ -19,4 +19,12 @@
     <ProjectReference Include="..\Crosscutting.Mail\Crosscutting.Mail.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Cloud.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
