--- a/src/Worker.Api/appsettings.Cloud.json
+++ b/src/Worker.Api/appsettings.Cloud.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;User ID=postgres;Password=postgres;Port=5432;Database=RentalAppDb;"
+    "EventStoreConnection": "Host=db-55153.dc-us-1.absamcloud.com;User ID=d_event_c;Password=sys7rn9tsgz6;Port=13504;Database=eventstoredb;"
   },
   "Logging": {
     "LogLevel": {
