--- a/src/Worker.Api/appsettings.Development.json
+++ b/src/Worker.Api/appsettings.Development.json
@@ -9,5 +9,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RabbitMqHostSettings": {
+    "Host": "localhost",
+    "Port": "5672",
+    "VirtualHost": "/",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
