--- a/src/Core.API/appsettings.Development.json
+++ b/src/Core.API/appsettings.Development.json
@@ -7,5 +7,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RabbitMqHostSettings": {
+    "Host": "localhost",
+    "Port": "5672",
+    "VirtualHost": "/",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
