--- a/src/Worker.Api/appsettings.Cloud.json
+++ b/src/Worker.Api/appsettings.Cloud.json
@@ -7,5 +7,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RabbitMqHostSettings": {
+    "Host": "turkey.rmq.cloudamqp.com",
+    "ConnectionString": "amqps://pqaywlcq:fAxA0gzleqIuKfdA3IwR3_hHCoD5G6x3@turkey.rmq.cloudamqp.com/pqaywlcq",
+    "Port": "5672",
+    "VirtualHost": "pqaywlcq",
+    "Username": "pqaywlcq",
+    "Password": "fAxA0gzleqIuKfdA3IwR3_hHCoD5G6x3"
   }
 }
