--- a/tests/Core.UnitTests/Core.UnitTests.csproj
+++ b/tests/Core.UnitTests/Core.UnitTests.csproj
@@ -28,6 +28,10 @@
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Testing.Base\Testing.Base.csproj" />
+	</ItemGroup>
+
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
