--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       dockerfile: src/Core.API/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Development
+      # ASPNETCORE_ENVIRONMENT: Cloud
     depends_on:
       - rabbitmq
       - postgres
@@ -25,6 +26,7 @@ services:
       dockerfile: src/Authentication.API/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Development
+      # ASPNETCORE_ENVIRONMENT: Cloud
     depends_on:
       - rabbitmq
       - postgres
@@ -42,6 +44,7 @@ services:
       dockerfile: src/Worker.Api/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Development
+      # ASPNETCORE_ENVIRONMENT: Cloud
     depends_on:
       - rabbitmq
       - postgres
